HW7. 420 Added News Categories

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -21,7 +21,7 @@
         <!--HEADER-->
 
         <header class="header position-center">
-            <div class="overlay"></div>
+            <div class="overlay hidden"></div>
                 <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
                 <nav>
                     <ul class="menu">
@@ -35,7 +35,7 @@
                             <div class="slider__name">lorem ipsum dolor</div>
                             <div class="slider__description">it will make all of your dreams come</div>
                         </div>
-                        <img src="img/header__slider_iphone.png" class="slider__pict">
+                        <img src="img/header__slider_iphone.png" class="slider__img hidden">
 
                     </div>
                     <ul class="switch slider__switch">
@@ -52,34 +52,48 @@
         <section class="about_company position-center">
             <div class="info_block">
                 <div class="title">about our company</div>
-                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
+                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
+                    neque. Praesent rhoncus ultrices posuere.
                     Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
-                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
+                    Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
                     Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</div>
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
                 <a class="link about_company__link" href="">read more</a>
             </div>
 
             <div class="info_block">
                 <div class="title">about our company</div>
-                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
-                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
-                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
+                    neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                    Nam vitae lectus eu libero pellentesque pulvinar.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque.
+                    Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
                     Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</div>
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
                 <a class="link about_company__link" href="">read more</a>
             </div>
 
             <div class="info_block">
                 <div class="title">about our company</div>
-                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
-                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
-                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                <div class="summary about_company__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non
+                    neque. Praesent rhoncus ultrices posuere.  Pellentesque vel lacus eget nisi convallis auctor.
+                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
                     Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</div>
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
                 <a class="link about_company__link" href="">read more</a>
             </div>
 
@@ -91,11 +105,14 @@
                 <img src="img/news_avatar.png" class="avatar" alt="avatar">
                 <div class="title pingbuller__title">PINGBULLER</div>
                 <div class="title title--description pingbuller__title--description">starts here</div>
-                <div class="summary pingbuller__summary">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
-                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus,
-                    mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                <div class="summary pingbuller__summary">“Nunc turpis neque, feugiat eget eleifend et,
+                    lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis
+                    auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in,
+                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
                     Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
                 </div>
             </div>
@@ -115,17 +132,23 @@
             <h2 class="title title--size--l recent_updates__title">recent updates</h2>
             <div class="recent_updates__post">
                 <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
-                <div class="summary">Posted by Admin on March 13<span class="hidden"> 2012<span class="hidden-m"> in Recent News</span></span></div>
+                <div class="summary">Posted by Admin on March 13
+                    <span class="hidden"> 2012<span class="hidden-m"> in Recent News</span></span>
+                </div>
             </div>
 
             <div class="recent_updates__post">
                 <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
-                <div class="summary">Posted by Admin on March 13<span class="hidden"> 2012<span class="hidden-m"> in Category</span></span></div>
+                <div class="summary">Posted by Admin on March 13
+                    <span class="hidden"> 2012<span class="hidden-m"> in Category</span></span>
+                </div>
             </div>
 
             <div class="recent_updates__post">
                 <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
-                <div class="summary">Posted by Admin on March 13<span class="hidden"> 2012<span class="hidden-m">in Blog Updates</span></span></div>
+                <div class="summary">Posted by Admin on March 13
+                    <span class="hidden"> 2012<span class="hidden-m">in Blog Updates</span></span>
+                </div>
             </div>
             <a class="link recent_updates__link" href="">more blog posts</a>
 
@@ -134,19 +157,80 @@
         <!--BANNERS-->
         <section class="banners">
             <div class="banners__wrapper clearfix">
-                <a href="https://marathon.ua/billabong/" target="_blank"> <img src="img/banner1.png" alt="billabong" class="banners__item banner1"></a>
-                <a href="https://www.gucci.com/int/en/" target="_blank"><img src="img/banner2.png" alt="gucci" class="banners__item banner2"></a>
-                <a href="#"><img src="img/banner3.png" alt="" class="banners__item banner3"></a>
-                <a href="http://www.awsmbrand.com/" target="_blank"><img src="img/banner4.png" alt="awsm" class="banners__item banner4"></a>
-                <a href="https://bigl.ua/sc-14515-rvca" target="_blank"><img src="img/banner5.png" alt="rvca" class="banners__item banner5"></a>
+                <a href="https://marathon.ua/billabong/" target="_blank">
+                    <img src="img/banner1.png" alt="billabong" class="banners__item banner1">
+                </a>
+
+                <a href="https://www.gucci.com/int/en/" target="_blank">
+                    <img src="img/banner2.png" alt="gucci" class="banners__item banner2">
+                </a>
+
+                <a href="#">
+                    <img src="img/banner3.png" alt="" class="banners__item banner3">
+                </a>
+
+                <a href="http://www.awsmbrand.com/" target="_blank">
+                    <img src="img/banner4.png" alt="awsm" class="banners__item banner4">
+                </a>
+
+                <a href="https://bigl.ua/sc-14515-rvca" target="_blank">
+                    <img src="img/banner5.png" alt="rvca" class="banners__item banner5">
+                </a>
+
                 <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank">
                     <img src="img/banner6.png" alt="VonZipper" class="banners__item banner6">
                 </a>
             </div>
         </section>
 
+        <!--NEWS CATEGORIES-->
+        <section class="news_categories hidden">
+            <h2 class="hidden-all">News</h2>
+            <div class="news_categories__post">
+                <div class="title news_categories__title">news categories</div>
+                <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                    non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                    aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
+            </div>
+
+            <div class="news_categories__post">
+                <div class="title news_categories__title">news categories</div>
+                <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                    non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                    aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
+            </div>
+
+            <div class="news_categories__post">
+                <div class="title news_categories__title">news categories</div>
+                <div class="summary news_categories__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia
+                    non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor.
+                    Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in,
+                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris
+                    aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
+            </div>
+
+        </section>
+
         <footer class="footer position-center">
-            <div class="summary summary--size--s footer__summary">Designed by <span class="summary--bold"> Pingbull AS</span></div>
+            <div class="summary summary--size--s footer__summary">Designed by
+                <span class="summary--bold"> Pingbull AS</span>
+            </div>
         </footer>
 
     </div>
