HW7. 420 Added Menu for Footer

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -227,7 +227,21 @@
 
         </section>
 
+        <!--FOOTER-->
         <footer class="footer position-center">
+
+            <nav class="hidden footer__nav">
+                <ul class="menu menu--horisontal footer__menu">
+                    <li class="menu__item"><a class="menu__link" href="#">HOME</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">about</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">blog</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">products</a></li>
+                    <li class="menu__item"><a class="menu__link" href="">lorem ipsum</a></li>
+                    <li class="menu__item"><a class="menu__link" href="">dolor sit amet</a>
+
+                </ul>
+            </nav>
+
             <div class="summary summary--size--s footer__summary">Designed by
                 <span class="summary--bold"> Pingbull AS</span>
             </div>
