HW7. 480 Added Menu for Header

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -21,11 +21,18 @@
         <!--HEADER-->
 
         <header class="header position-center">
+            <!--LOGO-->
             <div class="overlay hidden"></div>
                 <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
-                <nav>
-                    <ul class="menu">
-                        <li class="menu__item"><a class="menu__link" href="">HOME</a></li>
+            <!--Header MENU-->
+                <nav class="header__nav">
+                    <ul class="menu menu--vertical header__menu hidden ">
+                        <li class="menu__item position-center"><a class="menu__link menu__link--current" href="#">HOME</a></li>
+                        <li class="menu__item position-center"><a class="menu__link" href="#">about</a></li>
+                        <li class="menu__item position-center"><a class="menu__link" href="#">blog</a></li>
+                        <li class="menu__item position-center"><a class="menu__link" href="#">products</a></li>
+                        <li class="menu__item position-center"><a class="menu__link" href="">lorem ipsum</a></li>
+                        <li class="menu__item position-center"><a class="menu__link" href="">dolor sit amet</a>
                     </ul>
                 </nav>
 
@@ -231,7 +238,7 @@
         <footer class="footer position-center">
 
             <nav class="hidden footer__nav">
-                <ul class="menu menu--horisontal footer__menu">
+                <ul class="menu menu--horizontal footer__menu">
                     <li class="menu__item"><a class="menu__link" href="#">HOME</a></li>
                     <li class="menu__item"><a class="menu__link" href="#">about</a></li>
                     <li class="menu__item"><a class="menu__link" href="#">blog</a></li>
