--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -26,14 +26,16 @@
                 <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
             <!--Header MENU-->
                 <nav class="header__nav">
-                    <ul class="menu menu--vertical header__menu hidden ">
-                        <li class="menu__item position-center"><a class="menu__link menu__link--current" href="#">HOME</a></li>
-                        <li class="menu__item position-center"><a class="menu__link" href="#">about</a></li>
-                        <li class="menu__item position-center"><a class="menu__link" href="#">blog</a></li>
-                        <li class="menu__item position-center"><a class="menu__link" href="#">products</a></li>
-                        <li class="menu__item position-center"><a class="menu__link" href="">lorem ipsum</a></li>
-                        <li class="menu__item position-center"><a class="menu__link" href="">dolor sit amet</a>
+                    <ul class="menu menu--vertical header__menu">
+                        <li class="menu__item position-center"><a class="menu__link menu__link--current header__menu__link--current" href="#">HOME</a></li>
+                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="#">about</a></li>
+                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="#">blog</a></li>
+                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="#">products</a></li>
+                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="">lorem ipsum</a></li>
+                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="">dolor sit amet</a>
                     </ul>
+
+
                 </nav>
 
                 <div class="slider">
