HW7. Refactor Header menu for 480 and 320

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -25,17 +25,27 @@
             <div class="overlay hidden"></div>
                 <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
             <!--Header MENU-->
-                <nav class="header__nav">
+                <nav >
                     <ul class="menu menu--vertical header__menu">
-                        <li class="menu__item position-center"><a class="menu__link menu__link--current header__menu__link--current" href="#">HOME</a></li>
-                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="#">about</a></li>
-                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="#">blog</a></li>
-                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="#">products</a></li>
-                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="">lorem ipsum</a></li>
-                        <li class="menu__item position-center menu__item__hidden"><a class="menu__link" href="">dolor sit amet</a>
+                        <li class="menu__item">
+                            <a class="menu__link menu__link--current" href="#">HOME</a>
+                        </li>
+                        <li class="menu__item menu__item__hidden">
+                            <a class="menu__link" href="#">about</a>
+                        </li>
+                        <li class="menu__item  menu__item__hidden">
+                            <a class="menu__link" href="#">blog</a>
+                        </li>
+                        <li class="menu__item  menu__item__hidden">
+                            <a class="menu__link" href="#">products</a>
+                        </li>
+                        <li class="menu__item menu__item__hidden">
+                            <a class="menu__link" href="">lorem ipsum</a>
+                        </li>
+                        <li class="menu__item menu__item__hidden">
+                            <a class="menu__link" href="">dolor sit amet</a>
+                        </li>
                     </ul>
-
-
                 </nav>
 
                 <div class="slider">
@@ -240,13 +250,13 @@
         <footer class="footer position-center">
 
             <nav class="hidden footer__nav">
-                <ul class="menu menu--horizontal footer__menu">
-                    <li class="menu__item"><a class="menu__link" href="#">HOME</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">about</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">blog</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">products</a></li>
-                    <li class="menu__item"><a class="menu__link" href="">lorem ipsum</a></li>
-                    <li class="menu__item"><a class="menu__link" href="">dolor sit amet</a>
+                <ul class="menu footer__menu">
+                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">HOME</a></li>
+                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">about</a></li>
+                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">blog</a></li>
+                    <li class="menu__item"><a class="menu__link menu__link-small" href="#">products</a></li>
+                    <li class="menu__item"><a class="menu__link menu__link-small" href="">lorem ipsum</a></li>
+                    <li class="menu__item"><a class="menu__link menu__link-small" href="">dolor sit amet</a>
 
                 </ul>
             </nav>
@@ -257,7 +267,4 @@
         </footer>
 
     </div>
-
-
-
 </body>
