--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,800" rel="stylesheet">
     <link rel="stylesheet" href="css/switch.css">
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/width760.css">
     <link rel="stylesheet" href="css/width480.css">
     <link rel="stylesheet" href="css/width320.css">
 
@@ -22,48 +23,51 @@
 
         <header class="header position-center">
             <!--LOGO-->
-            <div class="overlay hidden"></div>
-                <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
+            <div class="logo header__logo">PINGBULL<span class="logo--end"> ER</span></div>
+
             <!--Header MENU-->
-                <nav >
-                    <ul class="menu menu--vertical header__menu">
-                        <li class="menu__item">
-                            <a class="menu__link menu__link--current" href="#">HOME</a>
-                        </li>
-                        <li class="menu__item menu__item__hidden">
-                            <a class="menu__link" href="#">about</a>
-                        </li>
-                        <li class="menu__item  menu__item__hidden">
-                            <a class="menu__link" href="#">blog</a>
-                        </li>
-                        <li class="menu__item  menu__item__hidden">
-                            <a class="menu__link" href="#">products</a>
-                        </li>
-                        <li class="menu__item menu__item__hidden">
-                            <a class="menu__link" href="">lorem ipsum</a>
-                        </li>
-                        <li class="menu__item menu__item__hidden">
-                            <a class="menu__link" href="">dolor sit amet</a>
-                        </li>
-                    </ul>
-                </nav>
+            <nav >
+                <ul class="menu menu--vertical header__menu">
+                    <li class="menu__item">
+                        <a class="menu__link menu__link--current" href="#">HOME</a>
+                    </li>
+                    <li class="menu__item menu__item__hidden">
+                        <a class="menu__link" href="#">about</a>
+                    </li>
+                    <li class="menu__item  menu__item__hidden">
+                        <a class="menu__link" href="#">blog</a>
+                    </li>
+                    <li class="menu__item  menu__item__hidden">
+                        <a class="menu__link" href="#">products</a>
+                    </li>
+                    <li class="menu__item menu__item__hidden">
+                        <a class="menu__link" href="">lorem ipsum</a>
+                    </li>
+                    <li class="menu__item menu__item__hidden">
+                        <a class="menu__link" href="">dolor sit amet</a>
+                    </li>
+                </ul>
+            </nav>
 
-                <div class="slider">
-                    <div class="slider__wrapper">
-                        <div class="slider__text">
-                            <div class="slider__name">lorem ipsum dolor</div>
-                            <div class="slider__description">it will make all of your dreams come</div>
-                        </div>
-                        <img src="img/header__slider_iphone.png" class="slider__img hidden">
-
+            <div class="overlay"></div>
+            <div class="slider">
+                <div class="slider__text">
+                    <div class="slider__name">lorem ipsum dolor</div>
+                    <div class="slider__description">it will make all of your dreams come</div>
+                    <div class="summary slider__summary hidden hidden-480">Semper sollicitudin gravida eget, vestibulum sit amet sapien.
+                        Nunc dignissim tincidunt est, et auctor turpis ornare a.
+                        Nam venenatis hendrerit est at volutpat. Morbi elementum euismod lacus id semper.
                     </div>
-                    <ul class="switch slider__switch">
-                        <li class="switch__bullet"></li>
-                        <li class="switch__bullet"><div class="switch__center"></div></li>
-                        <li class="switch__bullet"></li>
-                        <li class="switch__bullet"></li>
-                    </ul>
                 </div>
+                <img src="img/header__slider_iphone.png" class="slider__img hidden">
+
+                <ul class="switch slider__switch">
+                    <li class="switch__bullet"></li>
+                    <li class="switch__bullet"><div class="switch__center"></div></li>
+                    <li class="switch__bullet"></li>
+                    <li class="switch__bullet"></li>
+                </ul>
+            </div>
 
         </header>
 
