HW7. Added Pingbuller and News block

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -123,35 +123,36 @@
         </section>
 
         <!--PINGBULLER -->
-        <section class="pingbuller">
-            <div class="pingbuller__info_block">
-                <img src="img/news_avatar.png" class="avatar" alt="avatar">
-                <div class="title pingbuller__title">PINGBULLER</div>
-                <div class="title title--description pingbuller__title--description">starts here</div>
-                <div class="summary pingbuller__summary">“Nunc turpis neque, feugiat eget eleifend et,
-                    lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis
-                    auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in,
-                    venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
-                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
-                    Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
-                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
-                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
-                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+        <div class="news_wrapper">
+            <section class="pingbuller">
+                <div class="pingbuller__info_block">
+                    <img src="img/news_avatar.png" class="avatar" alt="avatar">
+                    <div class="title pingbuller__title">PINGBULLER</div>
+                    <div class="title title--description pingbuller__title--description">starts here</div>
+                    <div class="summary pingbuller__summary">“Nunc turpis neque, feugiat eget eleifend et,
+                        lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis
+                        auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in,
+                        venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
+                        Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu.
+                        Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                        Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                        Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                        Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                    </div>
                 </div>
-            </div>
 
-            <ul class="switch pingbuller__switch">
-                <li class="switch__bullet switch__bullet--theme--light"></li>
-                <li class="switch__bullet switch__bullet--theme--light">
-                    <div class="switch__center  switch__center--theme--light"></div>
-                </li>
-                <li class="switch__bullet switch__bullet--theme--light"></li>
-                <li class="switch__bullet switch__bullet--theme--light"></li>
-            </ul>
-        </section>
+                <ul class="switch pingbuller__switch">
+                    <li class="switch__bullet switch__bullet--theme--light"></li>
+                    <li class="switch__bullet switch__bullet--theme--light">
+                        <div class="switch__center  switch__center--theme--light"></div>
+                    </li>
+                    <li class="switch__bullet switch__bullet--theme--light"></li>
+                    <li class="switch__bullet switch__bullet--theme--light"></li>
+                </ul>
+            </section>
 
-        <!--RECENT UODATES-->
-        <section class="recent_updates">
+            <!--RECENT UODATES-->
+            <section class="recent_updates">
             <h2 class="title title--size--l recent_updates__title">recent updates</h2>
             <div class="recent_updates__post">
                 <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
@@ -176,6 +177,7 @@
             <a class="link recent_updates__link" href="">more blog posts</a>
 
         </section>
+        </div>
 
         <!--BANNERS-->
         <section class="banners">
